# fastapi-project-boilerplate

./: README.md  pyproject.toml
